ros2_ws/log/build_2022-05-20_17-19-02/ldmk_package/stderr.log
  File "/home/user/ros2_ws/install/ldmk_package/lib/python3.8/site-packages/ldmk_package/anglespublisher.py", line 52
    print("test:", & test)
                   ^
SyntaxError: invalid syntax

